@@ -76,8 +76,9 @@
 #define   SCT_TABWINDOW_NEXTTAB                                    "tab-window.next-tab"
 #define   SCT_TABWINDOW_PREVTAB                                    "tab-window.prev-tab"
 #define   SCT_TABWINDOW_CLOSETAB                                   "tab-window.close-tab"
+#define   SCT_TABWINDOW_CLOSEOTHERTABS                             "tab-window.close-other-tabs"
 #define   SCT_TABWINDOW_DETACHTAB                                  "tab-window.detach-tab"
-#define   SCT_TABWINDOW_SHOWCLOSEBUTTTONS							             "tab-window.show-close-buttons"
+#define   SCT_TABWINDOW_SHOWCLOSEBUTTTONS                          "tab-window.show-close-buttons"
 #define   SCT_TABWINDOW_TABSBOTTOM                                 "tab-window.show-tabs-at-bottom"
 #define   SCT_TABWINDOW_TABSINDICES                                "tab-window.show-tabs-indices"
 #define   SCT_TABWINDOW_SETASDEFAULT                               "tab-window.set-as-default"
